--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.8.1  # REQUIRED
+  build_runner: ^1.8.1
   json_serializable: ^3.3.0
 
 
