--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,7 @@
 include: all_lint_rules.yaml
 analyzer:
-  enable-experiment:
-    - non-nullable
+  #  enable-experiment:
+  #    - non-nullable
   exclude:
     - "lib/*.g.dart"
     - "lib/models/*.g.dart"
